[gd_scene load_steps=4 format=2]

[ext_resource path="res://Utilities/Overlays/BookElements/MissionObjective.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Fonts/NormalTextFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Utilities/Overlays/BookElements/MissionItem.gd" type="Script" id=3]

[node name="MissionItem" type="MarginContainer"]
anchor_right = 1.0
margin_bottom = 189.0
custom_constants/margin_right = 6
custom_constants/margin_top = 6
custom_constants/margin_left = 6
custom_constants/margin_bottom = 0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="PanelContainer" parent="."]
margin_left = 6.0
margin_top = 6.0
margin_right = 1018.0
margin_bottom = 189.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 1005.0
margin_bottom = 176.0

[node name="MissionName" type="Label" parent="Panel/VBoxContainer"]
margin_right = 998.0
margin_bottom = 32.0
custom_fonts/font = ExtResource( 2 )
text = "Mission Name"

[node name="MissionDescription" type="Label" parent="Panel/VBoxContainer"]
margin_top = 36.0
margin_right = 998.0
margin_bottom = 68.0
custom_fonts/font = ExtResource( 2 )
text = "This is a description"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SubObjectives" type="MarginContainer" parent="Panel/VBoxContainer"]
margin_top = 72.0
margin_right = 998.0
margin_bottom = 140.0
custom_constants/margin_left = 20

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/SubObjectives"]
margin_left = 20.0
margin_right = 998.0
margin_bottom = 68.0

[node name="Sub-Objective1" parent="Panel/VBoxContainer/SubObjectives/VBoxContainer" instance=ExtResource( 1 )]
margin_right = 978.0
margin_bottom = 32.0
text = "> Sub-objective incomplete"

[node name="Sub-Objective2" parent="Panel/VBoxContainer/SubObjectives/VBoxContainer" instance=ExtResource( 1 )]
margin_top = 36.0
margin_right = 978.0
margin_bottom = 68.0
complete = true
text = "> Sub-objective complete"
